actually fixed long urls not wrapping

--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -72,7 +72,8 @@ body {
 }
 
 main {
-    @include force-wrap();
+    word-wrap: break-all;
+    word-wrap: break-word;
 
     @include breakpoint($palm-end) {
         max-width: 32em;
